# rsss

./: .gitignore  CMakeLists.txt  feeds.c  feeds.h  rsssd.c  subscriptions.c  subscriptions.h
cmake/Modules/: FindCheck.cmake
test/: check_feeds.c  check_feeds.h  check_rsss.c  check_subscriptions.c  check_subscriptions.h
test/fixtures/: google-reader-subscriptions.xml  test_subscriptions.opml
